fix: wrap video title text properly

--- a/src/styles/css.css
+++ b/src/styles/css.css
@@ -128,6 +128,7 @@ ul.video-group li a {
     flex-direction: column;
     text-align: center;
     text-decoration: none;
+    text-wrap: balance;
 }
 
 ul.video-group li a img.tn {
@@ -144,11 +145,8 @@ ul.video-group li a .vt {
     font-size: 1.1rem;
     line-height: 1.4;
     margin-top: 0.5rem;
-    overflow: hidden;
     text-align: center;
-    text-overflow: ellipsis;
     text-wrap: balance;
-    white-space: nowrap;
     width: 100%;
 }
 
